# kpabe-network-poc

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  attributes.txt  http_client.cpp  http_client.h  http_proxy_server.cpp  http_proxy_server.h  http_response.cpp  http_response.h  https_server.cpp  https_server.h  known_attributes.txt  kpabe_client.cpp  kpabe_client.h  kpabe_server.cpp  kpabe_server.h  kpabe_utils.cpp  kpabe_utils.h  logger.cpp  logger.h  main.cpp  main_authority.cpp  main_server.cpp  main_verifier.cpp  netfilter_handler.cpp  netfilter_handler.h  policies.txt  socket_handler_manager.cpp  socket_handler_manager.h  socket_listener.h  ssl_utils.cpp  ssl_utils.h  utils.h
html/: index.html
